Release Notes - Mesos - Version 1.11.0
-------------------------------------------
This release contains the following highlights:

  * Mesos Containerizer now supports using pre-provisioned external CSI storage
    volumes by means of the new `volume/csi` isolator; the latter significantly
    extends the range of compatible 3rd party CSI plugins compared to the
    already existing SLRP-based solution (MESOS-10141).

  * The Scheduler API adds an interface allowing frameworks to put constraints
    on agent attributes in resource offers to help "picky" frameworks
    significantly reduce scheduling latency when close to being out of quota
    (MESOS-10161).

  * The CMake build becomes usable for deploying in production (MESOS-898).

Additional API Changes:

  * **Breaking change** Deprecated authentication credential text format support.

Unresolved Critical Issues:
  * [MESOS-10194] - Mesos master failure "Check failed: 'get_(role)' Must be SOME"
  * [MESOS-10186] - Segmentation fault while running mesos in SSL mode
  * [MESOS-10146] - Removing task from slave when framework is disconnected causes master to crash
  * [MESOS-10066] - mesos-docker-executor process dies when agent stops. Recovery fails when agent returns
  * [MESOS-10011] - Operation feedback with stale agent ID crashes the master
  * [MESOS-9967] - Authorization header is missing when using a default registry
  * [MESOS-9579] - ExecutorHttpApiTest.HeartbeatCalls is flaky.
  * [MESOS-9536] - Nested container launched with non-root user may not be able to write to its sandbox via the environment variable `MESOS_SANDBOX`
  * [MESOS-9500] - spark submit with docker image on mesos cluster fails.
  * [MESOS-9426] - ZK master detection can become forever pending.
  * [MESOS-9393] - Fetcher crashes extracting archives with non-ASCII filenames.
  * [MESOS-9365] - Windows - GET_CONTAINERS API call causes the Mesos agent to fail